# wgsPipeline

./: .bashrc  Dockerfile  Dockstore_Info.md  Dockstore_README.md  README.md  debug.txt  dockstore_test_location2.wdl  dockstore_wgsPipeline.wdl  failed_only.yaml  local.config  options.json  test_location.wdl  test_location2.wdl  tests.json  vep_hg19_filter_somaticsites.sh  wgsPipeline.wdl  wgs_pipeline.yaml  wgs_pipeline_recipe_all.yaml  wgs_pipeline_recipe_basic.yaml  wgs_pipeline_recipe_main.yaml
UGE/: all9_test_cre_uge.json  calculate.sh  pom.xml  wgsPipeline.wdl
archive/: test_location.wdl  wgs_pipeline_recipe_all.yaml
build_files/: bcl2fastq2-v2.18.0.12-Linux-x86_64.rpm
dockstore_imports/: dockstore_callability.wdl  dockstore_insertSizeMetrics.wdl
recipes/: data_modules_recipe.yaml  data_modules_recipe_prep.yaml  data_modules_test.yaml  data_modules_test2.yaml  wgs_pipeline_recipe_basic.yaml
submodules/bcl2fastq/wrapper/: .gitignore  Makefile.am  bcl2fastq-jail.1  configure.ac  main.cpp
tempBams/: normal.bam  normal.bam.bai  tumor.bam  tumor.bam.bai
tests/: all9.wdl  all9_test.json  all9_test_cre.json  all9_test_cre_uge.json  all9_test_nextseq.json  all9_test_nextseq_uge.json  all9_test_pcsi.json  all9_test_pcsi_uge.json  diagnose.py  dockstore_test_location2.wdl  link2.wdl  link2_test.json  link2_test_cre.json  link2_test_neat.json  middle5.wdl  middle5_test.json  middle5_test_hiseq.json  middle5_test_nextseq.json  nested.wdl  nested_test.json  pull_test_location2.wdl  test_location.wdl  test_location2.wdl  test_location_test.json  tests.json  top2.wdl  (+9 more)
(+174 files in other folders)
